--- a/Manuscript Analysis/ASHA Poster Analyses.Rmd
+++ b/Manuscript Analysis/ASHA Poster Analyses.Rmd
@@ -106,8 +106,8 @@ peak_pupil_df |>
   facet_grid(cog_measure ~ rep_acc) +
   labs(x = "Score", y = "Peak Pupil Dilation") +
   theme_classic() +
-  scale_color_manual(values = my_pal) +
-  scale_shape_manual(values = c(1, 2)) +
+  scale_color_manual(values = my_pal, labels = c("Neurotypical", "ALS") ) +
+  scale_shape_manual(values = c(1, 2), labels = c("Neurotypical", "ALS")) +
   theme(aspect.ratio = 1,
         panel.spacing.x = unit(.8, "lines"),
         legend.position = "bottom")
